# textkit-learn

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
_scratch/: word-sense-disambiguation-v1-basic.py  word-sense-disambiguation-v2-context.py  word-sense-disambiguation-v3.1-bert.py  word-sense-disambiguation-v3.2-bert.py  word-sense-disambiguation-v4.1-hybrid.py  word-sense-expand-lemmas.py  wordnet_loader.py
examples/: check_version.py  example_RoBERTa-base-go_emotions_emotion.py  example_arrow_base_types.py  example_arrow_types.py  example_check_tracked.py  example_conceptnet_v_5_7_kb.py  example_dask.py  example_document.py  example_documents_benchmark.py  example_evaluator_metrics.py  example_hf_model_finetune.py  example_llm_emotion.py  example_llm_hate_speech_detection.py  example_metadata.py  example_metric_calc.py  example_text_kb.py  example_tokenizer.py  example_triple_extractor.py  test_hf_tok.py  test_trainer.py  text_callbacks.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  adapters_example.ipynb  config.ipynb  conv-text-classifier.ipynb  dataset.ipynb  datasets.ipynb  disambiguation.ipynb  evaluator.ipynb  example_adapters.ipynb  example_conceptnet.ipynb  example_contractions.ipynb  example_copy_weights.ipynb  example_copy_weights_transformers.ipynb  example_encoder.ipynb  example_f1_score.ipynb  example_knowledge_base.ipynb  example_metrics.ipynb  example_module.ipynb  example_prototype_trainer.ipynb  example_torch_module_v2.ipynb  example_trainer.ipynb  example_trainer_extended.ipynb  example_trainer_minimal.ipynb  hf_trainer.ipynb  huggingface_trainer.ipynb  import_conceptnet.ipynb  metrics_test.ipynb  mlflow-tracking.ipynb  problem_type.ipynb  progressbar_tests.ipynb  test_config_class.ipynb  test_knowledge_base.ipynb  test_prototype_learning.ipynb  tklearn_trainer.ipynb  tokenizer.ipynb  trainer.ipynb
rust/: Cargo.toml
rust/src/: lib.rs
scratch/: base.py  example_automodel.py  example_prototype.py  graph.py  index.py  rdf.py  tasks.py
src/tklearn/: __init__.py  config.py  logging.py  rslib.pyi  scripts.py
src/tklearn/base/: __init__.py  callback.py  model.py
src/tklearn/core/: concept.py  document.py  document_v2.py  embedding.py  knowledge_graph.py  resource.py  tasks.py  triplet.py  vocab.py  vocab_store.py
src/tklearn/embeddings/: __init__.py  base.py  fasttext.py  gensim.py
src/tklearn/etc/: helpers.py  model.py  processor.py  tokenizer.py  tokenizer_v2.py
src/tklearn/kb/: __init__.py  base.py  loader.py  models.py  triplet.py
src/tklearn/kb/conceptnet/: __init__.py  base.py  concept.py  csv.py  io.py  namepsace.py  relation.py  uri.py
src/tklearn/kb/emolex/: __init__.py  io.py
src/tklearn/lang/: __init__.py
src/tklearn/lang/en/: __init__.py  _contractions.py  contractions.csv  contractions.py
src/tklearn/llm/: _test.py  clients.py  constraint.py  pipeline.py  verbalizer.py
src/tklearn/metrics/: __init__.py  array_accumulator.py  base.py  bias.py  classification.py  common.py  commons.py  generation.py  helpers.py  statistical_tests.py  steps_counter.py
src/tklearn/models/multiclass/: helpers.py
src/tklearn/nn/: __init__.py  loss.py  module.py  module_v1.py  optim.py  torch.py
src/tklearn/nn/_deprecated/: module_v1.py  module_v2.py  optim_v1.py
src/tklearn/nn/base/: __init__.py  helpers.py  module.py
src/tklearn/nn/callbacks/: __init__.py  base.py  checkpoint.py  early_stopping.py  history.py  plateau_early_stopping.py  progbar_logger.py  tracking.py
src/tklearn/nn/metrics/: __init__.py  base.py  classification.py  common.py
src/tklearn/nn/models/: __init__.py  base.py
src/tklearn/nn/prototypes/: __init__.py  classification.py  config.py  helpers.py  loss.py  sequence_classification.py
src/tklearn/nn/template/: classification.py  loss.py  trainer.py
src/tklearn/pipelines/: translate.py
src/tklearn/preprocessing/: __init__.py  align.py  annotator.py  annotator_v1.py  emoticons.py  keyword_processor.py  preprocessor.py  tokenization.py
src/tklearn/utils/: __init__.py  array.py  cache.py  checksum.py  copy.py  datasets.py  download.py  flashtext.py  hashing.py  html.py  io.py  lexrank.py  logging.py  mlflow.py  progressbar.py  progressbar_v2.py  runtime.py  simple_progressbar.py  string.py  target_types.py  targets.py  timeout.py  torch.py  trie.py  trie.pyi
tests/: config_tests.py  dataset_tests.py  test_add_docs_to_dataset.py  test_classification_metrics.py  test_early_stopping.py  test_get_docs_from_dataset.py  test_get_fields_from_dataset.py  test_memory_knowledge_graph.py  test_mmap_knowledge_graph.py  test_task_preprocessing.py
tklearn/: __init__.py  config.py  exceptions.py
tklearn/base/: callback.py  trainer.py
tklearn/core/: __init__.py  base.py  callback.py  callbacks.py  config.py  env.py  model.py  observer.py  optimizer.py  pipeline.py  task.py  tracking-temp.py  tracking-v2.py  tracking.py  trainer.py  version.py
tklearn/datasets/: __init__.py  array.py  array_v1.py  base.py  collection.py  dataset.py  document.py  io.py  loader.py  mapping.py  schema.py  source.py  types.py  utils.py
tklearn/datasets/schema/: __init__.py
tklearn/datasets/stores/: SQLAlchemyDataStore.py  __init__.py  base.py
tklearn/embedding/: __init__.py  keyedvectors.py
tklearn/kb/: base.py
tklearn/metrics/: __init__.py  base.py  classification.py  common.py  confusion_matrix.py  evaluator.py  huggingface.py
tklearn/nn/: __init__.py  base.py  callbacks.py  dataset.py  evaluator.py  loss.py  losses.py  model.py  torch.py  trainer.py  utils.py
tklearn/nn/callbacks/: __init__.py  base.py  callback.py  checkpoint.py  early_stopping.py  progbar_logger.py  validation.py
tklearn/nn/models/: __init__.py  attention.py  bert.py  conv_text_classifier.py
tklearn/nn/utils/: data.py
tklearn/preprocessing/: _collate.py  _masking.py  tokenization.py  tokenizer.py
tklearn/utils/: __init__.py  _utils.py  array.py  cache.py  collections.py  func.py  hash.py  logging.py  observable.py  progbar.py  resources.py  target_types.py
(+22 files in other folders)
