[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textkit-learn"
description = 'Helps computers to understand human languages.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name = "Yasas" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ysenarath/textkit-learn#readme"
Issues = "https://github.com/ysenarath/textkit-learn/issues"
Source = "https://github.com/ysenarath/textkit-learn"

[tool.hatch.build]
ignore-vcs = false
include = [
  "tklearn/**/*.py",
  "/tests",
  "/static",
  "/templates",
]
exclude = []

[tool.hatch.version]
path = "tklearn/__init__.py"

[dirs.env]
virtual = ".hatch"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=spraksyn --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "tklearn/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
