[package]
# `name` here is name of the package.
name = "textkit-learn"
version = "0.2.1"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rslib"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0-beta.0", features = [
    "generate-import-lib",
    "abi3-py38",
] }
